@@ -4,7 +4,7 @@
 from distutils.core import setup
 
 
-VERSION = "1.38"
+VERSION = "1.39"
 
 
 classifiers = [
