@@ -1,3 +1,6 @@
+2014/12/01 (version 1.39)
+- Fixed task properties popping up when not expected.
+
 2014/11/27 (version 1.38)
 - Fixed menu behavior when using GtkStatusIcon.
 - Added icons to the tray menu.
